# wallpaper-toolbox

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Package.swift  README.md  server-config.json
Apps/WindowsServerDemo/: README.md  config.example.json  requirements.txt
Apps/WindowsServerDemoTauri/: .gitignore  README.md  index.html  package-lock.json  package.json  requirements-tauri.txt  vite.config.ts
Apps/WindowsServerDemoTauri/src-tauri/: Cargo.toml  tauri.conf.json
Apps/WindowsServerDemoTauri/src-tauri/capabilities/: default.json
Apps/WindowsServerDemoTauri/src-tauri/src/: main.rs
Apps/iOSDemo/: README.md
Sources/: App.swift
Sources/Models/: AssetFile.swift  RemoteLibraryModels.swift  WallpaperItem.swift
Sources/Services/: MetadataService.swift  RePKGService.swift  RemoteLibraryClient.swift  SceneVideoBakeService.swift  SceneWallpaperPropertiesService.swift  SceneWallpaperRendererService.swift  SystemAudioCaptureService.swift  WallpaperScanner.swift  WallpaperService.swift  WebWallpaperRendererService.swift
Sources/Utils/: CGImage+Thumbnail.swift  Constants.swift  DesignSystem.swift  Localization.swift  PathResolver.swift  ThumbnailCache.swift
Sources/ViewModels/: AppViewModel.swift  SettingsStore.swift
Sources/Views/: AssetPickerSheet.swift  ContentView.swift  ExtractSheet.swift  GalleryView.swift  NewCollectionSheet.swift  ScenePropertiesSheet.swift  SettingsView.swift
docs/: cross-platform-windows-server-plan.md
resources/: AppIcon.icns
resources/osx-arm64/: RePKG.deps.json  libclrgc.dylib  (+12 more)
scripts/: build.sh  generate_app_icon.py
(+515 files in other folders)
