[package]
name = "wallpaper-server-tauri"
version = "0.1.0"
description = "Desktop control panel for Wallpaper Gallery Windows Server"
authors = ["Wallpaper Gallery"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
which = "7"
